<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="PRG_SpetrometerArm" Id="{eed80c44-a4f8-44e5-b6b2-59148c825f2f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SpetrometerArm
VAR
        {attribute 'TcLinkTo' := 'TIIB[Rack#1A-01 Coupler (EK1100)]^Rack#1A-02 SFIN (EL1918)^StandardOutputs^Standard In Var 2'}
    bEnaIclk AT %Q*: BOOL := TRUE;

    {attribute 'TcLinkTo' := 'TIIB[Rack#1A-01 Coupler (EK1100)]^Rack#1A-02 SFIN (EL1918)^StandardOutputs^Standard In Var 1'}
    bEnaIclkErrAck AT %Q*: BOOL := FALSE;

    {attribute 'TcLinkTo' := 'TIIB[Rack#1A-01 Coupler (EK1100)]^Rack#1A-02 SFIN (EL1918)^StandardOutputs^Standard In Var 9'}
    bEnaIclkRestartESTOP AT %Q*: BOOL := FALSE;

    fbPower_AxisM11: MC_Power;
    fbPower_AxisM12: MC_Power;
    fbPower_AxisM13: MC_Power;
    fbPower_AxisM14: MC_Power;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[ACT_ESTOP();

PRG_2Theta();
PRG_DET_ARM();
PRG_DET_CHAMBER();
PRG_DET_SLIT();
PRG_DET_FRAME();
PRG_OPT_SLITS();
PRG_OPT_YG();
PRG_OPT_XPM();
PRG_OPT();
PRG_Sensor();]]></ST>
    </Implementation>
    <Action Name="ACT_ESTOP" Id="{7f369682-d550-4605-a510-2370c6ba3316}">
      <Implementation>
        <ST><![CDATA[
IF bEnaIclkErrAck THEN
    bEnaIclkErrAck := FALSE;
END_IF
IF bEnaIclkRestartESTOP THEN
    bEnaIclkRestartESTOP := FALSE;
END_IF

// When user push the ESTOPs
// REVALUATE AFTER TESTING:
// Only specific motors are a part of the ESTOP at this point based on
// "Components" column on this page:
// https://confluence.slac.stanford.edu/display/L2SI/qRIXS+Spectrometer+Arm
// Items are commented out if not included in ESTOP to allow them to be added back easily.
IF NOT GVL_EPS.bESTOP THEN

    GVL_EPS.bOpenSV1 := FALSE;
    GVL_EPS.bOpenSV2 := FALSE;

    Main.M1.bEnable := FALSE; // SSL Sliding Seal // QRIX:SSL:MMS
    Main.M2.bEnable := FALSE; // 2Theta Arm // QRIX:SA:MMS:2Theta
    //Main.M3.bEnable := FALSE; // Optics Slits XS1 // QRIX:OPTSL:MMS:NORTH
    //Main.M4.bEnable := FALSE; // Optics Slits XS2 // QRIX:OPTSL:MMS:SOUTH
    //Main.M5.bEnable := FALSE; // Optics Slits YS1 // QRIX:OPTSL:MMS:TOP
    //Main.M6.bEnable := FALSE; // Optics Slits YS2 // QRIX:OPTSL:MMS:BOTTOM
    Main.M7.bEnable := FALSE; // Optics Base YG1 // QRIX:OPT:MMS:Y2
    Main.M8.bEnable := FALSE; // Optics Base YG2 // QRIX:OPT:MMS:Y2
    Main.M9.bEnable := FALSE; // Optics Base YG3 // QRIX:OPT:MMS:Y3
    //Main.M10.bEnable := FALSE; // Optics Grating RxG // QRIX:G:MMS:Rx
    //Main.M11.bEnable := FALSE; // Optics Grating XG // QRIX:G:MMS:X
    //Main.M12.bEnable := FALSE; // Optics Mirror XPM1 // QRIX:PM:MMS:X1
    //Main.M13.bEnable := FALSE; // Optics Mirror XPM2 // QRIX:PM:MMS:X2
    //Main.M14.bEnable := FALSE; // Optics Mirror RzPM // QRIX:PM:MMS:Rz
    Main.M15.bEnable := FALSE; // Detector Frame YDF1 // QRIX:DF:MMS:Y1
    Main.M16.bEnable := FALSE; // Detector Frame YDF2 // QRIX:DF:MMS:Y2
    Main.M17.bEnable := FALSE; // Detector Frame YDF3 // QRIX:DF:MMS:Y3
    //Main.M18.bEnable := FALSE; // Detector Slits XSDC1 // QRIX:DETSL:MMS:NORTH
    //Main.M19.bEnable := FALSE; // Detector Slits XSDC2 // QRIX:DETSL:MMS:SOUTH
    //Main.M20.bEnable := FALSE; // Detector Slits YSDC1 // QRIX:DETSL:MMS:TOP
    //Main.M21.bEnable := FALSE; // Detector Slits YSDC2 // QRIX:DETSL:MMS:BOTTOM
    //Main.M22.bEnable := FALSE; // Detector Chamber XDC // QRIX:DC:MMS:X
    //Main.M23.bEnable := FALSE; // Detector Chamber RyDC // QRIX:DC:MMS:Ry
    //Main.M24.bEnable := FALSE; // Detector Chamber ZDC // QRIX:DC:MMS:Z
    Main.M25.bEnable := FALSE; // Detector Arm YF1 // QRIX:DA:MMS:Y1
    Main.M26.bEnable := FALSE; // Detector Arm YF2 // QRIX:DA:MMS:Y2
    Main.M27.bEnable := FALSE; // Detector Arm ZF // QRIX:DA:MMS:Z

    bDoneJackOff := FALSE;
    bDoneLevitation := FALSE;
    bDoneLanding := FALSE;
    bDoneAdjustingRoll := FALSE;
    bDoneAdjustingPitch := FALSE;
    bDoneAdjustingHeight := FALSE;
END_IF


// Disable M1(Servo) and M2(Stepper) if the frame is landing...
IF NOT GVL_Sensor.bFloating THEN
    Main.M1.bEnable := FALSE;
    Main.M2.bEnable := FALSE;
END_IF


// When user requests to reset ESTOP.
IF GVL_EPS.bResetIclk THEN
    GVL_EPS.bResetIclk := FALSE;
    bEnaIclkErrAck := TRUE;
    bEnaIclkRestartESTOP := TRUE;
END_IF
]]></ST>
      </Implementation>
    </Action>
  </POU>
</TcPlcObject>